--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,55 +1,154 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    {% if title %}
-    <title>{{ title }} - Teterminal</title>
-    {% else %}
-    <title>Welcome to Teterminal</title>
-    {% endif %}
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body class="container">
-    {% if current_user.is_authenticated %}
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">
-          <img
-            src="{{url_for('static', filename='logo.png')}}"
-            alt="Logo"
-            width="30"
-            height="24"
-            class="d-inline-block align-text-top"
-          />
-          Teterminal
-        </a>
-      </div>
-    </nav>
-    {% else %}
-    <nav class="navbar bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Teterminal</a>
-      </div>
-    </nav>
-    {% endif %}
-    <hr />
-    {% with messages = get_flashed_messages() %} {% if messages %}
-    <ul>
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %} {% endwith %} {% block content %}{% endblock %}
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        {% if title %}
+            <title>{{ title }} - Teterminal</title>
+        {% else %}
+            <title>Welcome to Teterminal</title>
+        {% endif %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+              rel="stylesheet"
+              integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+              crossorigin="anonymous" />
+    </head>
+    <body class="container">
+        {% if current_user.is_authenticated %}
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{{ home }}">
+                        <img src="{{ url_for('static', filename='logo.webp') }}"
+                             alt="Logo"
+                             width="30"
+                             height="24"
+                             class="d-inline-block align-text-top" />
+                        <span class="fw-bold">Teterminal</span>
+                    </a>
+                    <button class="navbar-toggler"
+                            type="button"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown"
+                            aria-controls="navbarNavDropdown"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link mx-1 {% if active_page == 'home' %}active bg-primary rounded{% endif %}"
+                                   href="{{ home }}">Home</a>
+                            </li>
+                            {% if is_admin %}
+                                <li class="nav-item dropdown mx-2">
+                                    <a class="nav-link dropdown-toggle"
+                                       href="#"
+                                       role="button"
+                                       data-bs-toggle="dropdown"
+                                       aria-expanded="false">Manage</a>
+                                    <ul class="dropdown-menu">
+                                        <li>
+                                            <a class="dropdown-item" href="#">Fleet</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Clients</a>
+                                        </li>
+                                    </ul>
+                                </li>
+                            {% else %}
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Features</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Pricing</a>
+                                </li>
+                            {% endif %}
+                        </ul>
+                        <div class="dropdown">
+                            <a href="#"
+                               class="nav-link dropdown-toggle d-flex align-items-center"
+                               role="button"
+                               data-bs-toggle="dropdown"
+                               aria-expanded="false">
+                                <img src="{{ current_user.avatar(32) }}"
+                                     class="rounded-circle me-2"
+                                     width="32"
+                                     height="32"
+                                     alt="{{ current_user.username }}">
+                                <span class="text-light">{{ current_user.username }}</span>
+                            </a>
+                            <ul class="dropdown-menu mt-2">
+                                <li>
+                                    <a class="dropdown-item" href="#">Profile</a>
+                                </li>
+                                <li>
+                                    <hr class="dropdown-divider">
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="/logout">Logout</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        {% else %}
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/">
+                        <img src="{{ url_for('static', filename='logo.webp') }}"
+                             alt="Logo"
+                             width="30"
+                             height="24"
+                             class="d-inline-block align-text-top" />
+                        <span class="fw-bold">Teterminal</span>
+                    </a>
+                    <button class="navbar-toggler"
+                            type="button"
+                            data-bs-toggle="collapse"
+                            data-bs-target="#navbarNavDropdown"
+                            aria-controls="navbarNavDropdown"
+                            aria-expanded="false"
+                            aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <!-- Your navbar links would go here -->
+                    </div>
+                    {% if active_page != "register" and active_page != "login" %}
+                        <a class="btn btn-primary rounded-pill"
+                           href="{{ url_for("auth.register_client") }}">Sign Up</a>
+                    {% elif active_page == "login" %}
+                        <a class="btn btn-outline-danger rounded-pill" href="/">Back</a>
+                    {% endif %}
+                </div>
+            </nav>
+        {% endif %}
+        <hr />
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if
+                messages %}
+                {% for category, message in messages %}
+                    {% if category ==
+                        "danger" %}
+                        <div class="alert alert-{{ category }} text-center w-50 mx-auto alert-dismissible fade show"
+                             role="alert">
+                            {{ message }}
+                            <button type="button"
+                                    class="btn-close"
+                                    data-bs-dismiss="alert"
+                                    aria-label="Close"></button>
+                        </div>
+                    {% endif %}
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        {% block content %}
+            {%
+            endblock %}
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                    crossorigin="anonymous"></script>
+        </body>
+    </html>
