--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,16 +24,21 @@
                         {{ form.remember_me.label(class="form-check-label") }}
                     </div>
                     <div class="row mt-4 justify-content-center">
-                        <div class="col-md-6">{{ form.submit(class="btn btn-primary btn-lg w-100 rounded-pill shadow-sm") }}</div>
+                        <div class="col-md-6">{{ form.submit(class="btn btn-primary btn-lg w-100 shadow-sm") }}</div>
                     </div>
                 </div>
             </form>
-            {% if page_title == "Client" %}
-                <div class="mt-3">
-                    <a class="btn btn-outline-primary rounded-pill"
-                       href="{{ url_for("auth.register_client") }}">Register</a>
-                </div>
-            {% endif %}
+            <div class="mt-3">
+                <a class="btn btn-outline-primary"
+                   {% if page_title == "Client" %}
+                   href="{{ url_for("auth.signup_client") }}">
+                    Sign Up
+                {% else %}
+                    href="{{ url_for("auth.create_admin") }}">
+                    Create Admin
+                {% endif %}
+            </a>
         </div>
     </div>
+</div>
 {% endblock %}
