--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,22 +1,37 @@
 {% extends "base.html" %}
-{% set active_page = "register" %}
+{% set active_page = "sign up" %}
 {% block content %}
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
-            <h1>Sign Up</h1>
+            <h1>{{ page }}</h1>
             <form action="" method="post" novalidate>
                 <div class="shadow-lg p-4 rounded-4">
                     {{ form.hidden_tag() }}
-                    <div class="row g-4 mb-3 justify-content-center">
-                        <div class="col-md-4">
-                            {{ form.first_name(placeholder="First Name", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
-                            {% for error in form.first_name.errors %}<div class="text-danger small mt-1">{{ error }}</div>{% endfor %}
+                    {% if page_type == "Client" %}
+                        <div class="row g-4 mb-3 justify-content-center">
+                            <div class="col-md-4">
+                                {{ form.first_name(placeholder="First Name", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
+                                {% for error in form.first_name.errors %}<div class="text-danger small mt-1">{{ error }}</div>{% endfor %}
+                            </div>
+                            <div class="col-md-4">
+                                {{ form.last_name(placeholder="Last Name", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
+                                {% for error in form.last_name.errors %}<div class="text-danger small mt-1">{{ error }}</div>{% endfor %}
+                            </div>
                         </div>
-                        <div class="col-md-4">
-                            {{ form.last_name(placeholder="Last Name", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
-                            {% for error in form.last_name.errors %}<div class="text-danger small mt-1">{{ error }}</div>{% endfor %}
+                    {% else %}
+                        <div class="row g-4 mb-3 justify-content-center">
+                            <div class="col-md-8">
+                                {{ form.admin_code(placeholder="Admin Code", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
+                                {% for error in form.admin_code.errors %}<div class="text-danger small mt-1">{{ error }}</div>{% endfor %}
+                            </div>
                         </div>
-                    </div>
+                        <div class="row g-4 mb-3 justify-content-center">
+                            <div class="col-md-8">
+                                {{ form.last_name(placeholder="Last Name", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
+                                {% for error in form.last_name.errors %}<div class="text-danger small mt-1">{{ error }}</div>{% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="row g-4 mb-3 justify-content-center">
                         <div class="col-md-8">
                             {{ form.username(placeholder="Username", size=32, class="form-control form-control-lg text-center shadow-sm", required=True) }}
@@ -36,14 +51,19 @@
                         </div>
                     </div>
                     <div class="row mt-4 justify-content-center">
-                        <div class="col-md-6">{{ form.submit(class="btn btn-primary btn-lg w-100 rounded-pill shadow-sm") }}</div>
+                        <div class="col-md-6">{{ form.submit(class="btn btn-primary btn-lg w-100 shadow-sm") }}</div>
                     </div>
                 </div>
             </form>
             <div class="mt-3">
-                <a class="btn btn-outline-danger rounded-pill"
-                   href="{{ url_for("auth.login_client") }}">Back</a>
-            </div>
+                <a class="btn btn-outline-danger"
+                   {% if page_type == "Client" %}
+                   href="{{ url_for("auth.login_client") }}">
+                {% else %}
+                    href="{{ url_for("auth.login_admin") }}">
+                {% endif %}
+            Back</a>
         </div>
     </div>
+</div>
 {% endblock %}
