--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,8 @@
         {% if current_user.is_authenticated %}
             <nav class="navbar navbar-expand-lg">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="{{ home }}">
+                    <a class="navbar-brand"
+                       href=" {% if current_user.user_type == "admin" %} {{ url_for("main.dashboard_admin") }} {% else %}  {{ url_for("main.dashboard_client") }}  {% endif %} ">
                         <img src="{{ url_for('static', filename='logo.webp') }}"
                              alt="Logo"
                              width="30"
@@ -38,30 +39,51 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link mx-1 {% if active_page == 'home' %}active bg-primary rounded{% endif %}"
-                                   href="{{ home }}">Home</a>
+                                   href=" {% if current_user.user_type == "admin" %} {{ url_for("main.dashboard_admin") }} {% else %}  {{ url_for("main.dashboard_client") }}  {% endif %} ">Home</a>
                             </li>
-                            {% if is_admin %}
+                            <li class="nav-item">
+                                <a class="nav-link mx-1 {% if active_page == 'availability' %}active bg-primary rounded{% endif %}"
+                                   href="{{ url_for("main.availability") }}">Availability</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link mx-1 {% if active_page == 'schedules' %}active bg-primary rounded{% endif %}"
+                                   href="{{ url_for("main.schedules") }}">Schedules</a>
+                            </li>
+                            {% if current_user.user_type == "admin" %}
                                 <li class="nav-item dropdown mx-2">
-                                    <a class="nav-link dropdown-toggle"
+                                    <a class="nav-link dropdown-toggle {% if active_page == "manage_clients" or active_page == "manage_buses" or active_page == "manage_cars" or active_page == "manage_drivers" or active_page == "manage_conductors" %}active bg-primary rounded{% endif %}"
                                        href="#"
                                        role="button"
                                        data-bs-toggle="dropdown"
                                        aria-expanded="false">Manage</a>
                                     <ul class="dropdown-menu">
                                         <li>
-                                            <a class="dropdown-item" href="#">Fleet</a>
+                                            <a class="dropdown-item {% if active_page == "manage_clients" %}text-primary{% endif %}"
+                                               href="{{ url_for("main.manage_clients") }}">Clients</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" href="#">Clients</a>
+                                            <a class="dropdown-item {% if active_page == "manage_buses" %}text-primary{% endif %}"
+                                               href="{{ url_for("main.manage_buses") }}">Buses</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item {% if active_page == "manage_cars" %}text-primary{% endif %}"
+                                               href="{{ url_for("main.manage_cars") }}">Cars</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item {% if active_page == "manage_drivers" %}text-primary{% endif %}"
+                                               href="{{ url_for("main.manage_drivers") }}">Drivers</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item {% if active_page == "manage_conductors" %}text-primary{% endif %}"
+                                               href="{{ url_for("main.manage_conductors") }}">Conductors</a>
                                         </li>
                                     </ul>
                                 </li>
                             {% else %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Features</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">Pricing</a>
+                                    <a class="nav-link"
+                                       href="https://github.com/TheMasshiro/teterminal"
+                                       target="_blank">Github</a>
                                 </li>
                             {% endif %}
                         </ul>
@@ -80,13 +102,14 @@
                             </a>
                             <ul class="dropdown-menu mt-2">
                                 <li>
-                                    <a class="dropdown-item" href="#">Profile</a>
+                                    <a class="dropdown-item"
+                                       href="{{ url_for("main.profile", username=current_user.username) }}">Profile</a>
                                 </li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="/logout">Logout</a>
+                                    <a class="dropdown-item text-danger" href="/logout">Logout</a>
                                 </li>
                             </ul>
                         </div>
@@ -113,14 +136,11 @@
                             aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                        <!-- Your navbar links would go here -->
-                    </div>
-                    {% if active_page != "register" and active_page != "login" %}
-                        <a class="btn btn-primary rounded-pill"
-                           href="{{ url_for("auth.register_client") }}">Sign Up</a>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown"></div>
+                    {% if active_page != "sign up" and active_page != "login" %}
+                        <a class="btn btn-primary" href="{{ url_for("auth.signup_client") }}">Sign Up</a>
                     {% elif active_page == "login" %}
-                        <a class="btn btn-outline-danger rounded-pill" href="/">Back</a>
+                        <a class="btn btn-outline-danger" href="/">Back</a>
                     {% endif %}
                 </div>
             </nav>
@@ -147,8 +167,11 @@
         {% block content %}
             {%
             endblock %}
+            <script src="{{ url_for('static', filename='index/index.js') }}"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
                     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+                    crossorigin="anonymous"></script>
+            <script src="https://kit.fontawesome.com/18e0e7470f.js"
                     crossorigin="anonymous"></script>
         </body>
     </html>
