--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,9 +11,9 @@
             <p>Your real-time on-fleet tracking system</p>
         </div>
         <div class="d-grid gap-3 col-12 col-sm-8 col-md-6 col-lg-3 mx-auto">
-            <a class="btn btn-primary btn-lg rounded-pill"
+            <a class="btn btn-primary btn-lg"
                href="{{ url_for("auth.login_admin") }}">Admin</a>
-            <a class="btn btn-primary btn-lg rounded-pill"
+            <a class="btn btn-primary btn-lg"
                href="{{ url_for("auth.login_client") }}">Client</a>
         </div>
     </div>
