added refresh disable

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set disable_refresh = true %}
 {% set active_page = "sign up" %}
 {% block content %}
     <div class="d-flex justify-content-center align-items-center vh-100">
