--- a/app/templates/main/add_vehicle.html
+++ b/app/templates/main/add_vehicle.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set disable_refresh = true %}
 {% if type == "bus" %}
     {% set active_page = "manage_buses" %}
 {% else %}
