--- a/app/templates/errors/500.html
+++ b/app/templates/errors/500.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set disable_refresh = true %}
 {% block content %}
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
