--- a/app/templates/main/dashboard.html
+++ b/app/templates/main/dashboard.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set disable_refresh = true %}
 {% set active_page = "home" %}
 {% block content %}
     <div class="container d-flex flex-column align-items-center justify-content-center vh-100">
@@ -60,12 +61,6 @@
                             </li>
                             <li>
                                 <a class="dropdown-item" href="{{ url_for("main.manage_cars") }}">Manage Cars</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{{ url_for("main.manage_drivers") }}">Manage Drivers</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item" href="{{ url_for("main.manage_conductors") }}">Manage Conductors</a>
                             </li>
                         </ul>
                     </div>
