--- a/app/templates/main/edit_client.html
+++ b/app/templates/main/edit_client.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% set disable_refresh = true %}
 {% set active_page = "manage_clients" %}
 {% block content %}
     <div class="d-flex justify-content-center align-items-center vh-100">
@@ -42,10 +43,6 @@
                     href="{{ url_for("main.manage_buses") }}">
                 {% elif page == "edit_cars" %}
                     href="{{ url_for("main.manage_cars") }}">
-                {% elif page == "edit_drivers" %}
-                    href="{{ url_for("main.manage_drivers") }}">
-                {% elif page == "edit_conductors" %}
-                    href="{{ url_for("main.manage_conductors") }}">
                 {% endif %}
             Cancel</a>
         </div>
